[gd_scene load_steps=8 format=3 uid="uid://bjulh6tvhxv2f"]

[ext_resource type="Script" uid="uid://cun3qin25d47b" path="res://scenes/ui/w_inventory.gd" id="1_s6ek7"]
[ext_resource type="Texture2D" uid="uid://d3sc5n71oubkw" path="res://assets/ui/Inventory_icons_and_text.png" id="2_ruujd"]
[ext_resource type="Texture2D" uid="uid://clixtoeo1lsel" path="res://assets/ui/cancel.png" id="3_d1v88"]
[ext_resource type="PackedScene" uid="uid://csdap3pqjxc8t" path="res://scenes/ui/w_equip_slot.tscn" id="4_c05lv"]
[ext_resource type="PackedScene" uid="uid://bavjflq6jy301" path="res://scenes/ui/w_item_slot.tscn" id="5_c05lv"]

[sub_resource type="FontFile" id="FontFile_ruujd"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="FontFile_ybn3v"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0

[node name="WInventory" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6ek7")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 180)
layout_mode = 2
texture = ExtResource("2_ruujd")
region_rect = Rect2(-1, 36, 113, 106)
patch_margin_left = 11
patch_margin_top = 10
patch_margin_right = 8
patch_margin_bottom = 12

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
texture = ExtResource("2_ruujd")
region_rect = Rect2(110, 103, 114, 19)
patch_margin_left = 12
patch_margin_top = 2
patch_margin_right = 10
patch_margin_bottom = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.894118, 0.772549, 0.396078, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = SubResource("FontFile_ruujd")
text = "背包"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="CloseBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"CommonButton"
theme_override_colors/font_outline_color = Color(0.894118, 0.772549, 0.396078, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
text = "x"
icon = ExtResource("3_d1v88")
flat = true
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_d1v88")
region_rect = Rect2(-2, -2, 20, 20)
patch_margin_left = 15
patch_margin_top = 16
patch_margin_right = 15
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="w_equip_slot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"weapon"
equip_type = 5

[node name="w_equip_slot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"necklace"
equip_type = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="w_equip_slot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"head"
equip_type = 2

[node name="w_equip_slot3" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"chest"

[node name="w_equip_slot5" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"feet"
equip_type = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="w_equip_slot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"ring1"
equip_type = 4

[node name="w_equip_slot3" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"ring2"
equip_type = 4

[node name="w_equip_slot4" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer/MarginContainer/HBoxContainer/VBoxContainer3" instance=ExtResource("4_c05lv")]
layout_mode = 2
mouse_filter = 1
equip_slot_name = &"ring3"
equip_type = 4

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_d1v88")
region_rect = Rect2(-2, -2, 20, 20)
patch_margin_left = 15
patch_margin_top = 16
patch_margin_right = 15
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = SubResource("FontFile_ybn3v")
theme_override_font_sizes/font_size = 15
current_tab = 0
tab_count = 4
tab_0/title = "全部"
tab_1/title = "装备"
tab_2/title = "消耗品"
tab_3/title = "材料"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="w_item_slot" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot2" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot3" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot4" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot5" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot6" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot7" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2

[node name="w_item_slot8" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer2/MarginContainer/ScrollContainer/GridContainer" instance=ExtResource("5_c05lv")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DecomposeBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"YellowButton"
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
text = "分解"

[node name="PackBtn" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"YellowButton"
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
text = "整理"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
